--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2021"
 members = ["wiresafe-derive"]
 
 [dependencies]
+crc32fast = { version = "1.3", default-features = false }
 wiresafe-derive = { path = "wiresafe-derive" }
 arrayvec = { version = "*", optional = true }
 
 [features]
 default = ["std"]
-std = []
+std = ["crc32fast/std"]
